# DualSense32

./: .gitignore  CMakeLists.txt  DS32.code-workspace  README.md  platformio.ini
.pio/libdeps/featheresp32/TFT_eSPI/: User_Setup.h
include/: DS32.h  DS32_LVGL.c  DS32_LVGL.h  DS32_PS5.c  DS32_PS5.h
lib/UI/: ui.c  ui.h  ui_helpers.c  ui_helpers.h  ui_img_298733024.c
lib/lvgl/: ..git 2.icloud  .git 2  lv_conf.h
lib/ps5-esp32/src/: ps5.c  ps5.h  ps5Controller.cpp  ps5Controller.h  ps5_int.h  ps5_l2cap.c
src/: DS32.cpp  DS32.h  LOG.md  PS5 Controller Protocal.md  main.cpp
